RESOLVED FIXED153094
[EFL][GTK][SeccompFilter] Fix build break when enabling --seccomp-filters
https://bugs.webkit.org/show_bug.cgi?id=153094
Summary [EFL][GTK][SeccompFilter] Fix build break when enabling --seccomp-filters
Gyuyoung Kim
Reported 2016-01-14 02:10:44 PST
diskCacheDirectory and cookiePersistentStoragePath were removed by r192796. But SyscallPolicy::addDefaultWebProcessPolicy has added directory permission. It looks two paths needs to be handled by network process.
Attachments
Patch (2.33 KB, patch)
2016-01-14 02:12 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2016-01-14 02:12:02 PST
Csaba Osztrogonác
Comment 2 2016-01-14 03:12:28 PST
Comment on attachment 268950 [details] Patch LGTM
WebKit Commit Bot
Comment 3 2016-01-14 06:42:36 PST
Comment on attachment 268950 [details] Patch Clearing flags on attachment: 268950 Committed r195056: <http://trac.webkit.org/changeset/195056>
WebKit Commit Bot
Comment 4 2016-01-14 06:42:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.