[EFL][GTK][SeccompFilter] Fix build break when enabling --seccomp-filters https://bugs.webkit.org/show_bug.cgi?id=153094

Reviewed by Csaba Osztrogonác.

diskCacheDirectory and cookiePersistentStoragePath were removed by r192796.
But SyscallPolicy::addDefaultWebProcessPolicy has added directory permission
to the removed paths.

It looks two paths needs to be handled by network process.

* Shared/linux/SeccompFilters/SyscallPolicy.cpp:
(WebKit::SyscallPolicy::addDefaultWebProcessPolicy): Deleted.


Canonical link: https://commits.webkit.org/171183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195056 268f45cc-cd09-0410-ab3c-d52691b4dbfc